# py-http-plugin

./: .gitignore  pyproject.toml
http_plugin/: __init__.py
tests/: test_http_plugin.py
